--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,3 +23,11 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Build and Push Docker Image
+    - uses: elgohr/Publish-Docker-Github-Action@master
+      with: 
+        name: thinkai/billerCalculator
+        username: ${{ secrets.Docker_Username }}
+        password: ${{ secrets.Docker_Password }}
+        dockerfile: Dockerfile
+      
