--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,6 @@ jobs:
       with: 
         name: thinkai/billerCalculator
         registry: docker.io
-        username: thinkai
-        password: a8d0e422-7343-4709-832f-9a459aa5d97f
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
         dockerfile: ./BillPayment/Dockerfile
