--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,6 @@ jobs:
       with: 
         name: thinkai/billerCalculator
         registry: docker.io
-        username: ${{ Secret.DOCKER_USERNAME }}
-        password: ${{ Secret.DOCKER_PASSWORD }}
+        username: ${{ Secrets.DOCKER_USERNAME }}
+        password: ${{ Secrets.DOCKER_PASSWORD }}
         dockerfile: ./BillPayment/Dockerfile
